--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My To-Do List!</title>
+    <title>My To-Do List | Items</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    @using ToDoList.Models; <!--using Razor to import-->
+    @using ToDoList.Models;
     <h1>To Do List</h1>
     @if (Model.Count == 0)
     {
@@ -19,5 +19,9 @@
       }
     </ul>
     <a href="/items/new">Add a new item.</a>
+
+    <form action="/items/delete" method="post">  <!-- Only forms can submit and use the POST method -->
+      <button type="submit" name="button">Clear All Items</button>
+    </form>
   </body>
 </html>
