--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Welcome to the To Do List!</h1>
-    <a href='/items/new'>Add a new item</a>
+    <h1>Welcome to the To Do List!</h1> <hr>
+    <a href='/items/new'>Add a new item</a> <br>
     <a href='/items'>See list of items</a>
   </body>
 </html> 
