--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -7,7 +7,7 @@
   </head>
   <body>
     @using ToDoList.Models;
-    <h1>To Do List</h1>
+    <h1>To Do List</h1><hr>
     @if (Model.Count == 0)
     {
       <p>There are no items in the list.</p>
@@ -15,10 +15,10 @@
     <ul>
       @foreach (Item item in Model)
       {
-        <li>@item.Description</li>
+        <li><a href='/items/@item.Id'>@item.Description</a></li>
       }
     </ul>
-    <a href="/items/new">Add a new item.</a>
+    <a href="/items/new">Add a new item.</a><br>
 
     <form action="/items/delete" method="post">  <!-- Only forms can submit and use the POST method -->
       <button type="submit" name="button">Clear All Items</button>
