--- a/ToDoList/Views/Categories/New.cshtml
+++ b/ToDoList/Views/Categories/New.cshtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Add a category</h1>>hr>
+    <h1>Add a category</h1><hr>
     <p>Add a category here:</p>
 
     <form action="/categories" method="post">
