--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -8,7 +8,7 @@
   <body>
     @using ToDoList.Models;
 
-    <h3>Here are all the items in this category:</h3>
+    <h3>Here are all the items in this category:</h3><hr>
 
     <ol>
     @foreach (Item item in @Model["items"])
