--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Welcome to the To Do List!</h1> <hr>
-    <a href='/items/new'>Add a new item</a> <br>
-    <a href='/items'>See list of items</a>
+    <a href='/categories/new'>Add a new category</a> <br>
+    <a href='/categories'>View categories</a>
   </body>
 </html> 
