--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -7,10 +7,10 @@
   </head>
   <body>
     <h1>To Do List Item Details: </h1><hr>
+    <h2>@Model["item"].Description</h2>
+    <h3>Category: @Model["category"].Name</h3>
 
-    <h2>@Model.Description</h2>
-
-    <a href='/items/new'>Add another item</a><br>
-    <a href='/items'>View all items</a>
+    <a href='/categories/@Model["category"].Id/items/new'>Add another item</a>
+    <a href='/categories'>View all categories</a>
   </body>
 </html>
